--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,7 +63,7 @@
                     android:gravity="center_vertical"
                     android:hint="이메일을 입력하세요"
                     android:paddingLeft="20dp"
-                    android:textSize="18dp"/>
+                    android:textSize="18dp" />
 
 
             </LinearLayout>
@@ -85,7 +85,7 @@
                     android:textSize="17dp"
                     android:textStyle="bold" />
 
-                <TextView
+                <EditText
                     android:id="@+id/et_pw"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
@@ -100,7 +100,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/bt_login"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginLeft="25dp"
@@ -119,7 +119,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/tv_find"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -129,7 +129,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/tv_join"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
