--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -60,7 +60,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/img"
             android:layout_width="120dp"
             android:layout_height="120dp"
             app:srcCompat="@drawable/img"
@@ -162,7 +162,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/bt_join"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginLeft="25dp"
